<resources>
    <string name="app_name">MobileCheckUp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cu">Checkup</string>
    <string name="de">Disease Entry</string>
    <string name="exit">Exit</string>
    <string name="s">Symptoms</string>
    <string name="los">List of Signs</string>
    <string name="lopd">List of possible disease</string>
    <string name="wtd">What To Do:</string>
    <string name="back">Back</string>
    <string name="as2">Add Sign</string>
    <string name="ca">Cancel</string>
    <string name="nm">Name</string>
    <string name="as">Add Symptom</string>
    <string name="ok">OK</string>
    <string name="ad">Add Disease</string>
    <string name="title_activity_my_activity2">MyActivity2</string>
    <string name="title_activity_my_activity3">MyActivity3</string>
    <string name="title_activity_my_activity4">MyActivity4</string>
    <string name="title_activity_my_activity5">MyActivity5</string>
    <string name="title_activity_my_activity6">MyActivity6</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>