<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.yuudachi.mobilecheckup.addsign">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_weight=".1"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/as"
            android:id="@+id/asb2"
            android:onClick="act"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/as2"
            android:id="@+id/button"
            android:onClick="act3"
             />

    </LinearLayout>

    <ListView
        android:layout_weight=".8"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:id="@+id/sslv"
        android:layout_gravity="center" />
    <Button
        android:layout_weight=".1"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:text="@string/cu"
        android:id="@+id/ok2"
        android:onClick="act2"
        android:layout_gravity="center_horizontal|bottom" />

</LinearLayout>
