<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.yuudachi.mobilecheckup.DiseaseData"
    >

    <TextView
        android:layout_weight=".1"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/tv1" />
    <TextView
        android:layout_weight=".1"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/los"
        android:id="@+id/tv2"
        android:background="@android:color/darker_gray" />
    <ListView
        android:layout_weight=".3"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:id="@+id/lv1" />
    <TextView
        android:layout_weight=".1"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wtd"
        android:id="@+id/tv3"
        android:textColor="#fc141414"
        android:singleLine="true"
        android:textIsSelectable="false"
        android:background="@android:color/darker_gray" />
    <ListView
        android:layout_weight=".3"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:id="@+id/lv2" />
    <Button
        android:layout_weight=".1"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:id="@+id/b1"
        android:text="@string/ok"
        android:onClick="ok"/>

</LinearLayout>